@@ -15,6 +15,7 @@ cupt (1.3.0) UNRELEASED; urgency=low
           all work to main resolver.
         - Don't try to remove the same unsynchronizeable package multiple
           times.
+        - Fixed 'full' flavor of the resolver in non-debug mode.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Fri, 30 Oct 2009 13:54:43 +0200
 
